<resources>
    <string name="app_name">LessPass</string>
    <string name="security">Security</string>

    <string name="hint_site">Site</string>
    <string name="hint_login">Login</string>
    <string name="hint_master_password">Master password</string>

    <string name="copy">Copy</string>
    <string name="password_options">Password Options</string>
    <string name="abc">abc</string>
    <string name="abc_upper">ABC</string>
    <string name="numbers">123</string>
    <string name="symbols">%!@</string>

    <string name="length">Length</string>
    <string name="counter">Counter</string>

    <string name="default_lenght">12</string>
    <string name="default_counter">1</string>

</resources>
