<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/site_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LessPassFields"
        android:drawableStart="@drawable/ic_computer_black_18dp"
        android:drawableLeft="@drawable/ic_computer_black_18dp"
        android:drawablePadding="8dp"
        android:hint="@string/hint_site"
        android:background="@drawable/edit_text_border"/>

    <EditText
        android:id="@+id/login_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LessPassFields"
        android:drawableStart="@drawable/ic_person_black_18dp"
        android:drawableLeft="@drawable/ic_person_black_18dp"
        android:drawablePadding="8dp"
        android:hint="@string/hint_login"
        android:background="@drawable/edit_text_border"/>

    <EditText
        android:id="@+id/master_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LessPassFields"
        android:drawableStart="@android:drawable/ic_secure"
        android:drawableLeft="@android:drawable/ic_partial_secure"
        android:drawablePadding="8dp"
        android:hint="@string/hint_master_password"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_border"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@color/colorGrayLighter"
            android:gravity="center"/>

        <Button
            android:id="@+id/copy_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/copy"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_options"
        android:layout_margin="16dp"
        android:padding="8dp"
        style="?android:listSeparatorTextViewStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:padding="8dp">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abc"
            android:checked="true"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abc_upper"
            style="@style/LessPassChecks"
            android:checked="true"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numbers"
            style="@style/LessPassChecks"
            android:checked="true"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/symbols"
            style="@style/LessPassChecks"
            android:checked="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/length"
            android:layout_weight="1"
            android:gravity="center"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_weight="1"
            android:padding="8dp"
            android:background="@drawable/edit_text_border"
            android:text="@string/default_lenght"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/counter"
            android:layout_weight="1"
            android:gravity="center"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_weight="1"
            android:padding="8dp"
            android:background="@drawable/edit_text_border"
            android:text="@string/default_counter"/>



    </LinearLayout>

</LinearLayout>
